force-app/main/default/objects/Compliance_Report__c/Compliance_Report__c.object-meta.xml
<CustomObject>
    <label>Compliance Report</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Compliance Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>