force-app/main/default/objects/Compliance_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Reports</relationshipLabel>
    <relationshipName>Compliance_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>