force-app/main/default/objects/Compliance_Report__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <label>Days Overdue</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>