force-app/main/default/objects/Compliance_Report__c/fields/Regulatory_Body__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Body__c</fullName>
    <label>Regulatory Body</label>
    <type>Text</type>
    <length>255</length>
</CustomField>