force-app/main/default/objects/Compliance_Report__c/fields/Regulatory_Permit__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Permit__c</fullName>
    <label>Regulatory Permit</label>
    <referenceTo>Regulatory_Permit__c</referenceTo>
    <relationshipLabel>Compliance Reports</relationshipLabel>
    <relationshipName>Compliance_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>