force-app/main/default/objects/Compliance_Report__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <label>Reporting Period</label>
    <type>Text</type>
    <length>255</length>
</CustomField>